--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!--Stylesheet for blocky style-->
         <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
         <!--Stylesheet for homepage-->
-        <link rel="stylesheet" href="homepage.css" type="text/css" />
+        <link rel="stylesheet" href="index.css" type="text/css" />
         <link rel="stylesheet" href="basic.css" type="text/css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -20,7 +20,7 @@
                 <div class="block fixed round">UNDOCKT</div>
             </div>
             <nav class="nav nav-pills">
-                <div class="nav-item"><a href="homepage.html" class="nav-link active">Home</a></div>
+                <div class="nav-item"><a href="index.html" class="nav-link active">Home</a></div>
                 <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
                 <div class="nav-item"><a href="history.html" class="nav-link">History</a></div>
                 <div class="nav-item"><a href="donationpage.html" class="nav-link">Donate</a></div>
