--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
                 <div class="block fixed round">UNDOCKT</div>
             </div>
             <nav class="nav nav-pills">
-                <div class="nav-item"><a href="homepage.html" class="nav-link">Home</a></div>
+                <div class="nav-item"><a href="index.html" class="nav-link">Home</a></div>
                 <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
                 <div class="nav-item"><a href="history.html" class="nav-link active">History</a></div>
                 <div class="nav-item"><a href="donationpage.html" class="nav-link">Donate</a></div>
